collects/plot/src/all/plplot.h

typedef double PLFLT;
typedef float PLFLT;
typedef long PLINT;
typedef int PLINT;
/* For passing user data, as with X's XtPointer */

typedef void* PLPointer;
/*
 * NOTE: a PLfGrid3 is a good idea here but there is no way to exploit it yet
 * so I'll leave it out for now.
 */

/*
 * PLcGrid is for passing (as a pointer to the first element) arbitrarily
 * dimensioned coordinate transformation arrays.  The grid dimensions MUST be
 * stored, with a maximum of 3 dimensions assumed for now.
 */

typedef struct {
    PLFLT *xg, *yg, *zg;
    PLINT nx, ny, nz;
} PLcGrid;
#define    plot3d	c_plot3d
#define    plscmap1n	c_plscmap1n
#define    plscmap1l	c_plscmap1l
#define    c_plbox3	plbox3
#define    c_plcol0	plcol0
#define    c_plcont	plcont
#define    c_plend	plend
#define    c_plenv	plenv
#define    c_plerrx	plerrx
#define    c_plerry	plerry
#define    c_plfill	plfill
#define    c_plinit	plinit
#define    c_pljoin	pljoin
#define    c_pllab	pllab
#define    c_plline	plline
#define    c_plline3	plline3
#define    c_plmeshc	plmeshc
#define    c_plot3d	plot3d
#define    c_plpoin	plpoin
#define    c_plpoly3	plpoly3
#define    c_plptex	plptex
#define    c_plscmap1n	plscmap1n
#define    c_plscmap1l	plscmap1l
#define    c_plscol0	plscol0
#define    c_plscolbg	plscolbg
#define    c_plsdev	plsdev
#define    c_plsfnam	plsfnam
#define    c_plshades	plshades
#define    c_plspage	plspage
#define    c_plw3d	plw3d
#define    c_plwid	plwid
/* This is the 3-d analogue of plbox(). */

MZ_DLLEXPORT
void
c_plbox3(const char *xopt, const char *xlabel, PLFLT xtick, PLINT nsubx,
	 const char *yopt, const char *ylabel, PLFLT ytick, PLINT nsuby,
	 const char *zopt, const char *zlabel, PLFLT ztick, PLINT nsubz);
/* Set color, map 0.  Argument is integer between 0 and 15. */

MZ_DLLEXPORT
void
c_plcol0(PLINT icol0);
/* Draws a contour plot from data in f(nx,ny).  Is just a front-end to
 * plfcont, with a particular choice for f2eval and f2eval_data. 
 */

 MZ_DLLEXPORT
void
c_plcont(PLFLT **f, PLINT nx, PLINT ny, PLINT kx, PLINT lx,
	 PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
	 void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	 PLPointer pltr_data);
/* Draws a contour plot using the function evaluator f2eval and data stored
 * by way of the f2eval_data pointer.  This allows arbitrary organizations
 * of 2d array data to be used. 
 */

void
plfcont(PLFLT (*f2eval) (PLINT, PLINT, PLPointer),
	PLPointer f2eval_data,
	PLINT nx, PLINT ny, PLINT kx, PLINT lx,
	PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
	void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	PLPointer pltr_data);
/* End a plotting session for all open streams. */

MZ_DLLEXPORT
void
c_plend(void);
/* Simple interface for defining viewport and window. */

MZ_DLLEXPORT
void
c_plenv(PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
	PLINT just, PLINT axis);
/* Plot horizontal error bars (xmin(i),y(i)) to (xmax(i),y(i)) */

MZ_DLLEXPORT
void
c_plerrx(PLINT n, PLFLT *xmin, PLFLT *xmax, PLFLT *y);
/* Plot vertical error bars (x,ymin(i)) to (x(i),ymax(i)) */

MZ_DLLEXPORT
void
c_plerry(PLINT n, PLFLT *x, PLFLT *ymin, PLFLT *ymax);
/* Pattern fills the polygon bounded by the input points. */


MZ_DLLEXPORT
void
c_plfill(PLINT n, PLFLT *x, PLFLT *y);
/* Initializes PLplot, using preset or default options */

MZ_DLLEXPORT
void
c_plinit(void);
/* Draws a line segment from (x1, y1) to (x2, y2). */

MZ_DLLEXPORT
void
c_pljoin(PLFLT x1, PLFLT y1, PLFLT x2, PLFLT y2);
/* Simple routine for labelling graphs. */

MZ_DLLEXPORT
void
c_pllab(const char *xlabel, const char *ylabel, const char *tlabel);
/* Draws line segments connecting a series of points. */

MZ_DLLEXPORT
void
c_plline(PLINT n, PLFLT *x, PLFLT *y);
/* Draws a line in 3 space.  */

MZ_DLLEXPORT
void
c_plline3(PLINT n, PLFLT *x, PLFLT *y, PLFLT *z);
/* Plots a mesh representation of the function z[x][y] with contour */

MZ_DLLEXPORT
void
c_plmeshc(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt,
	  PLFLT *clevel, PLINT nlevel);
/* Plots a 3-d representation of the function z[x][y]. */

MZ_DLLEXPORT
void
c_plot3d(PLFLT *x, PLFLT *y, PLFLT **z,
	 PLINT nx, PLINT ny, PLINT opt, PLINT side);
/* 
 * definitions for the opt argument in plot3dc() and plsurf3d()
 * 
 * DRAW_LINEX *must* be 1 and DRAW_LINEY *must* be 2, because of legacy code!
 */

#define DRAW_LINEX  (1 << 0) /* draw lines parallel to the X axis */
#define DRAW_LINEY  (1 << 1) /* draw lines parallel to the Y axis */
#define DRAW_LINEXY (DRAW_LINEX | DRAW_LINEY) /* draw lines parallel to both the X and Y axis */
#define MAG_COLOR   (1 << 2) /* draw the mesh with a color dependent of the magnitude */
#define BASE_CONT   (1 << 3) /* draw contour plot at bottom xy plane */
#define TOP_CONT    (1 << 4) /* draw contour plot at top xy plane */
#define SURF_CONT   (1 << 5) /* draw contour plot at surface */
#define DRAW_SIDES  (1 << 6) /* draw sides */
#define MESH        (1 << 8) /* draw mesh */
/* Plots array y against x for n points using ASCII code "code".*/

MZ_DLLEXPORT
void
c_plpoin(PLINT n, PLFLT *x, PLFLT *y, PLINT code);
/* Draws a polygon in 3 space.  */

MZ_DLLEXPORT
void
c_plpoly3(PLINT n, PLFLT *x, PLFLT *y, PLFLT *z, PLINT *draw, PLINT ifcc);
/* Prints out "text" at world cooordinate (x,y). */

MZ_DLLEXPORT
void
c_plptex(PLFLT x, PLFLT y, PLFLT dx, PLFLT dy, PLFLT just, const char *text);
/* Set number of colors in cmap 1 */

MZ_DLLEXPORT
void
c_plscmap1n(PLINT ncol1);
/* Set color map 1 colors using a piece-wise linear relationship between */
/* intensity [0,1] (cmap 1 index) and position in HLS or RGB color space. */

MZ_DLLEXPORT
void
c_plscmap1l(PLINT itype, PLINT npts, PLFLT *intensity,
	    PLFLT *coord1, PLFLT *coord2, PLFLT *coord3, PLINT *rev);
/* Set a given color from color map 0 by 8 bit RGB value */

MZ_DLLEXPORT
void
c_plscol0(PLINT icol0, PLINT r, PLINT g, PLINT b);
/* Set the background color by 8 bit RGB value */

MZ_DLLEXPORT
void
c_plscolbg(PLINT r, PLINT g, PLINT b);
/* Set the device (keyword) name */

MZ_DLLEXPORT
void
c_plsdev(const char *devname);
/* Set the output file name. */

MZ_DLLEXPORT
void
c_plsfnam(const char *fnam);
/* Shade region. */
MZ_DLLEXPORT
void
c_plshades( PLFLT **a, PLINT nx, PLINT ny, PLINT (*defined) (PLFLT, PLFLT),
	  PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
	  PLFLT *clevel, PLINT nlevel, PLINT fill_width,
	  PLINT cont_color, PLINT cont_width,
	  void (*fill) (PLINT, PLFLT *, PLFLT *), PLINT rectangular,
	  void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	  PLPointer pltr_data);
   
void 
c_plshade(PLFLT **a, PLINT nx, PLINT ny, PLINT (*defined) (PLFLT, PLFLT),
	  PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
	  PLFLT shade_min, PLFLT shade_max,
	  PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
	  PLINT min_color, PLINT min_width,
	  PLINT max_color, PLINT max_width,
	  void (*fill) (PLINT, PLFLT *, PLFLT *), PLINT rectangular,
	  void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	  PLPointer pltr_data);
void 
plshade1(PLFLT *a, PLINT nx, PLINT ny, PLINT (*defined) (PLFLT, PLFLT),
	 PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
	 PLFLT shade_min, PLFLT shade_max,
	 PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
	 PLINT min_color, PLINT min_width,
	 PLINT max_color, PLINT max_width,
	 void (*fill) (PLINT, PLFLT *, PLFLT *), PLINT rectangular,
	 void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	 PLPointer pltr_data);
void 
plfshade(PLFLT (*f2eval) (PLINT, PLINT, PLPointer),
	 PLPointer f2eval_data,
	 PLFLT (*c2eval) (PLINT, PLINT, PLPointer),
	 PLPointer c2eval_data,
	 PLINT nx, PLINT ny, 
	 PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
	 PLFLT shade_min, PLFLT shade_max,
	 PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
	 PLINT min_color, PLINT min_width,
	 PLINT max_color, PLINT max_width,
	 void (*fill) (PLINT, PLFLT *, PLFLT *), PLINT rectangular,
	 void (*pltr) (PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer),
	 PLPointer pltr_data);
/* Set output device parameters.  Usually ignored by the driver. */

MZ_DLLEXPORT
void
c_plspage(PLFLT xp, PLFLT yp, PLINT xleng, PLINT yleng,
	  PLINT xoff, PLINT yoff);
/* Set up a window for three-dimensional plotting. */

MZ_DLLEXPORT
void
c_plw3d(PLFLT basex, PLFLT basey, PLFLT height, PLFLT xmin0,
	PLFLT xmax0, PLFLT ymin0, PLFLT ymax0, PLFLT zmin0,
	PLFLT zmax0, PLFLT alt, PLFLT az);
/* Set pen width. */

MZ_DLLEXPORT
void
c_plwid(PLINT width);
/* Sets an optional user exit handler. */

void
plsexit(int (*handler) (char *));
/* Does linear interpolation from singly dimensioned coord arrays. */

MZ_DLLEXPORT
void
pltr1(PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, PLPointer pltr_data);